Enhance CI/CD workflow for development deployment by adding support for dynamic branch deployment, improved Docker image tagging, and notifications for build and deployment status.

--- a/.github/workflows/ci-cd-dev.yaml
+++ b/.github/workflows/ci-cd-dev.yaml
@@ -3,39 +3,205 @@ name: Deploy to Development
 on:
   workflow_dispatch:
     inputs:
-      image:
-        description: 'Docker image to deploy'
+      deploy_branch:
+        description: 'Branch to deploy from source repo'
         required: true
-      sha:
+        type: string
+        default: 'dev'
+      commit_sha:
         description: 'Git SHA of the commit'
         required: true
+        type: string
       commit_message:
         description: 'Original commit message'
         required: true
+        type: string
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:   
-  deploy-frontend-dev:
-    runs-on: ubuntu-latest
+  build-frontend-dev-image:
+    runs-on: ubuntu-24.04-arm
     environment: dev
     steps:
-      - name: Display Deployment Information
+      - name: Display Build Information
         run: |
-          echo "Image: ${{ github.event.inputs.image }}"
-          echo "SHA: ${{ github.event.inputs.sha }}"
+          echo "Branch: ${{ github.event.inputs.deploy_branch }}"
+          echo "Commit SHA: ${{ github.event.inputs.commit_sha }}"
           echo "Commit Message: ${{ github.event.inputs.commit_message }}"
-          
-      - name: Checkout repository code
-        uses: actions/checkout@v4
 
-      - name: Set frontend image tag from dispatch input
-        run: echo "FRONTEND_IMAGE=${{ github.event.inputs.image }}" >> $GITHUB_ENV
+      - name: Checkout source repository code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.inputs.deploy_branch }}
+          repository: 'Greatify/ExamX-V2-Frontend'
+          token: ${{ secrets.REPO_DISPATCH_TOKEN }}
+
+      - name: Configure AWS credentials for ECR
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Fetch environment secrets from AWS
+        id: fetch-secrets
+        run: |
+          aws secretsmanager get-secret-value \
+            --secret-id examx-frontend-dev \
+            --query SecretString \
+            --output text > .env
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: v0.12.0
+          driver-opts: |
+            image=moby/buildkit:v0.12.0
+          buildkitd-flags: |
+            --debug
+            --allow-insecure-entitlement security.insecure
+            --allow-insecure-entitlement network.host
+          config-inline: |
+            [registry."docker.io"]
+              mirrors = ["mirror.gcr.io"]
+            [worker.oci]
+              max-parallelism = 4
+
+      - name: Free disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          sudo apt-get clean
+          docker system prune -af
+          df -h
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Generate dev image tag
+        id: generate-tag
+        run: |
+          COMMIT_ID="${{ github.event.inputs.commit_sha }}"
+          COMMIT_MSG="${{ github.event.inputs.commit_message }}"
+          
+          # Remove newlines, tabs, and limit length
+          CLEAN_MSG=$(echo "$COMMIT_MSG" | tr -d '\n\r\t' | head -c 60 | tr -s ' ' | xargs || echo "no-message")
+          # Sanitize to safe characters only
+          SAFE_MSG=$(echo "$CLEAN_MSG" | sed -e 's/[^a-zA-Z0-9 _-]//g' -e 's/[[:space:]]/-/g' -e 's/--*/-/g' -e 's/^-\+\|-\+$//g' | cut -c1-35 | sed 's/-$//' || echo "fallback")
+          # Ensure we have a valid tag
+          FINAL_MSG=$(echo "$SAFE_MSG" | grep -E '^[a-zA-Z0-9][a-zA-Z0-9_-]*$' || echo "commit-$(date +%s)")
+          IMAGE_TAG="dev-${FINAL_MSG}-${COMMIT_ID}"
+          
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "COMMIT_SHA=$COMMIT_ID" >> $GITHUB_OUTPUT
+          echo "Generated Image Tag: $IMAGE_TAG"
+
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-dev-${{ github.event.inputs.commit_sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-dev-
+            ${{ runner.os }}-buildx-
+
+      - name: Build and push frontend Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:${{ steps.generate-tag.outputs.IMAGE_TAG }}
+          platforms: linux/arm64
+          build-args: |
+            ENV_FILE=.env
+            USE_BADPROXY=true
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          no-cache: false
+          pull: true
+          labels: |
+            org.opencontainers.image.revision=${{ github.event.inputs.commit_sha }}
+            org.opencontainers.image.created=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+
+      - name: Move cache directory
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+      - name: Save image tag to file
+        run: |
+          echo "${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:${{ steps.generate-tag.outputs.IMAGE_TAG }}" > frontend_image_tag.txt
+
+      - name: Upload frontend image tag file
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-image-tag
+          path: frontend_image_tag.txt
+          if-no-files-found: error
+
+      - name: Cleanup environment files
+        run: rm -f .env
+
+      - name: Send Docker build failure notification
+        if: failure()
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          author_name: Docker Build Failure 🐳
+          mention: channel
+          if_mention: always
+          job_name: build-frontend-dev-image
+          channel: examxv2-frontend-alerts
+          username: ExamX-V2-CICD
+          text: |
+            ❌ *Docker build failed for dev deployment* 🐳
+            *Commit:* `${{ github.event.inputs.commit_sha }}`
+            *Message:* ${{ github.event.inputs.commit_message }}
+            Please fix the Docker build issues.
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+  deploy-frontend-dev:
+    runs-on: ubuntu-24.04-arm
+    needs: [build-frontend-dev-image]
+    environment: dev
+    steps:
+      - name: Checkout deployment repository
+        uses: actions/checkout@v4
+        with:
+          repository: 'Greatify/ExamX-V2-Frontend-Deployment'
+          ref: 'main'
+          fetch-depth: 0
+
+      - name: Download image tag files
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-image-tag
+          path: .
+
+      - name: Set image tags as environment variables
+        run: |
+          echo "FRONTEND_IMAGE=$(cat frontend_image_tag.txt)" >> $GITHUB_ENV
 
       - name: Update deployment image tag in Kustomization
         run: |
-          # Update the image tag in the deployment patch
-          sed -i 's|image: "[^"]*"|image: "'"$FRONTEND_IMAGE"'"|' k8s/overlays/dev/kustomization.yaml
-          sed -i 's|kubernetes.io/change-cause:.*|kubernetes.io/change-cause: Updated to "'"$FRONTEND_IMAGE"'"|g' k8s/overlays/dev/kustomization.yaml
+          # Update image tags in the dev overlay kustomization file
+          if [[ "$RUNNER_OS" == "macOS" ]]; then
+            # macOS
+            sed -i '' 's|image: "[^"]*"|image: "'"$FRONTEND_IMAGE"'"|g' k8s/overlays/dev/kustomization.yaml
+            sed -i '' 's|kubernetes.io/change-cause:.*|kubernetes.io/change-cause: Updated to "'"$FRONTEND_IMAGE"'"|g' k8s/overlays/dev/kustomization.yaml
+          else
+            # Linux
+            sed -i 's|image: "[^"]*"|image: "'"$FRONTEND_IMAGE"'"|g' k8s/overlays/dev/kustomization.yaml
+            sed -i 's|kubernetes.io/change-cause:.*|kubernetes.io/change-cause: Updated to "'"$FRONTEND_IMAGE"'"|g' k8s/overlays/dev/kustomization.yaml
+          fi
 
       - name: Commit and push changes
         run: |
@@ -48,16 +214,9 @@ jobs:
             echo "No changes to commit, skipping commit and push"
           else
             echo "Changes detected, committing and pushing"
-            git commit -m "Update image tags for dev deployment"
+            git commit -m "Update image tags for dev deployment - ${{ github.event.inputs.commit_message }}"
             git push origin main
           fi
-
-      # - name: Push to protected branch
-      #   uses: CasperWA/push-protected@v2
-      #   with:
-      #     token: ${{ secrets.PAT_TOKEN }}
-      #     branch: dev
-      #     unprotect_reviews: true
 
       - name: Configure AWS credentials for deployment
         uses: aws-actions/configure-aws-credentials@v3
@@ -79,7 +238,7 @@ jobs:
         with:
           status: ${{ job.status }}
           author_name: Frontend Deployment Success
-          mention: ${{ github.actor }}
+          mention: channel
           if_mention: success
           job_name: deploy-frontend-dev
           channel: examxv2-frontend-alerts
@@ -87,10 +246,30 @@ jobs:
           text: |
             :rocket: *Frontend deployment to dev environment succeeded*
             
-            *Deployment by:* @${{ github.actor }}
-            *Commit:* ${{ github.event.inputs.sha }}
-            *Commit message:* ${{ github.event.inputs.commit_message }}
+            *Commit:* `${{ github.event.inputs.commit_sha }}`
+            *Message:* ${{ github.event.inputs.commit_message }}
             
-            @${{ github.actor }}, your changes have been deployed successfully to Development.
+            Your changes have been deployed successfully to Development.
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Send deployment failure notification
+        if: failure()
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          author_name: Deployment Failure ❌
+          mention: channel
+          if_mention: failure
+          job_name: deploy-frontend-dev
+          channel: examxv2-frontend-alerts
+          username: ExamX-V2-CICD
+          text: |
+            ❌ *Dev Deployment Failed*
+            
+            *Commit:* `${{ github.event.inputs.commit_sha }}`
+            *Message:* ${{ github.event.inputs.commit_message }}
+            
+            Please check the logs and fix the issues immediately.
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
