--- a/k8s/overlays/uat/kustomization.yaml
+++ b/k8s/overlays/uat/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: uat-examxv2
 # Reference the base kustomization
 resources:
   - ../../base
+  - frontend-ingress.yaml
 # Patches
 patches:
   - patch: |-
@@ -350,40 +351,6 @@ patches:
     target:
       kind: Service
       name: examxv2-frontend-service
-  # - patch: |-
-  #     apiVersion: networking.k8s.io/v1
-  #     kind: Ingress
-  #     metadata:
-  #       name: examxv2-frontend-ingress
-  #       annotations:
-  #         kubernetes.io/ingress.class: nginx
-  #         nginx.ingress.kubernetes.io/rewrite-target: /
-  #         nginx.ingress.kubernetes.io/ssl-redirect: "true"
-  #         nginx.ingress.kubernetes.io/use-regex: "true"
-  #         nginx.ingress.kubernetes.io/proxy-body-size: "10m"
-  #         nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
-  #         nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
-  #         nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
-  #         cert-manager.io/cluster-issuer: letsencrypt-prod
-  #     spec:
-  #       tls:
-  #         - hosts:
-  #             - klockwork.ai
-  #           secretName: uat-klockwork-tls
-  #       rules:
-  #         - host: klockwork.ai
-  #           http:
-  #             paths:
-  #               - path: /
-  #                 pathType: Prefix
-  #                 backend:
-  #                   service:
-  #                     name: examxv2-frontend-service
-  #                     port:
-  #                       number: 80
-  #   target:
-  #     kind: Ingress
-  #     name: examxv2-frontend-ingress
   - patch: |-
       apiVersion: autoscaling/v2
       kind: HorizontalPodAutoscaler
