Add Pod Disruption Budget for frontend service in kustomization.yaml

--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -8,3 +8,6 @@ resources:
   - service/frontend-svc.yaml
   # - ingress/examxv2-ingress.yaml
   - configmap/frontend-nginx-config.yaml
+  
+  # Pod Disruption Budgets
+  - pdb/frontend-pdb.yaml
