--- a/.github/workflows/ci-cd-stg.yaml
+++ b/.github/workflows/ci-cd-stg.yaml
@@ -11,8 +11,8 @@ on:
         description: 'Enter branch name to deploy'
         required: true
         type: string
-      use_default_runner:
-        description: 'Run on default runner (ubuntu-24.04-arm) instead of self-hosted?'
+      use_self_hosted_runner:
+        description: 'Run on self-hosted runner?'
         required: true
         type: boolean
         default: false
@@ -23,7 +23,7 @@ concurrency:
 
 jobs:
   security-password-check:
-    runs-on: ${{ github.event.inputs.use_default_runner == 'true' && 'ubuntu-24.04-arm' || 'self-hosted' }}
+    runs-on: ${{ github.event.inputs.use_self_hosted_runner == 'true' && 'self-hosted' || 'ubuntu-24.04-arm' }}
     steps:
       - name: Verify deployment password
         id: password-check
@@ -67,7 +67,7 @@ jobs:
 
   build-frontend-staging-image:
     needs: security-password-check 
-    runs-on: ${{ github.event.inputs.use_default_runner == 'true' && 'ubuntu-24.04-arm' || 'self-hosted' }}
+    runs-on: ${{ github.event.inputs.use_self_hosted_runner == 'true' && 'self-hosted' || 'ubuntu-24.04-arm' }}
     environment: stg
     steps:
       - name: Checkout repository code
@@ -218,7 +218,7 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
   deploy-frontend-staging:
-    runs-on: ${{ github.event.inputs.use_default_runner == 'true' && 'ubuntu-24.04-arm' || 'self-hosted' }}
+    runs-on: ${{ github.event.inputs.use_self_hosted_runner == 'true' && 'self-hosted' || 'ubuntu-24.04-arm' }}
     needs: [build-frontend-staging-image]
     environment: stg
     steps:
