Update frontend ingress configuration to include comment for ingress class in EKS Auto Mode

--- a/k8s/overlays/uat/frontend-ingress.yaml
+++ b/k8s/overlays/uat/frontend-ingress.yaml
@@ -34,7 +34,7 @@ metadata:
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:399600302704:certificate/29c7b407-7f44-4060-ab94-602a60d331a5
     alb.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec:
-  ingressClassName: alb
+  ingressClassName: alb  # EKS Auto Mode
   rules: 
     - host: adaniuni.examx.ai
       http:
