--- a/.github/workflows/ci-cd-dev.yaml
+++ b/.github/workflows/ci-cd-dev.yaml
@@ -234,7 +234,7 @@ jobs:
         run: |
           kubectl apply -k k8s/overlays/dev --validate=true
           kubectl rollout status deployment examxv2-frontend -n dev-examxv2 --timeout=300s
-
+          kubectl delete pdb examxv2-frontend-pdb -n dev-examxv2
       - name: Create CloudFront Invalidation
         run: |
           INVALIDATION_ID=$(aws cloudfront create-invalidation --distribution-id ${{ env.CLOUDFRONT_DISTRIBUTION }} --paths "/*" --query 'Invalidation.Id' --output text)
