Revert "Refactor kustomization for dev environment - Exclude PDB resources and specify required frontend components"
This reverts commit e49e628b263989c4059cac05b061409a9fcfe7bf.

--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -1,13 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: dev-examxv2
-# Exclude base PDB resources and include only what's needed for dev
 resources:
-  - ../../base/autoscaling/frontend-autoscaler.yaml
-  - ../../base/deployment/frontend-deploy.yaml
-  - ../../base/service/frontend-svc.yaml
-  - ../../base/configmap/frontend-nginx-config.yaml
-  # NOTE: PDB resources are excluded for dev environment
+  - ../../base
 patches:
   - patch: |-
       apiVersion: apps/v1
