--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -194,6 +194,53 @@ patches:
                       return 200 'OK';
                   }
 
+                  # Proxy for answerhub API (answerhub.examx.cloud)
+                  location /answerhub-api/ {
+                      proxy_pass https://answerhub.examx.cloud/api/;
+                      proxy_http_version 1.1;
+                      proxy_set_header Host answerhub.examx.cloud;
+                      proxy_set_header X-Real-IP $remote_addr;
+                      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                      proxy_set_header X-Forwarded-Proto $scheme;
+                      proxy_set_header X-Forwarded-Host $host;
+                      
+                      # CORS headers
+                      add_header 'Access-Control-Allow-Origin' $http_origin always;
+                      add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                      add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Accept' always;
+                      add_header 'Access-Control-Allow-Credentials' 'true' always;
+                      
+                      # Handle preflight requests
+                      if ($request_method = 'OPTIONS') {
+                          add_header 'Access-Control-Allow-Origin' $http_origin;
+                          add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+                          add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Accept';
+                          add_header 'Access-Control-Allow-Credentials' 'true';
+                          add_header 'Access-Control-Max-Age' 1728000;
+                          add_header 'Content-Type' 'text/plain; charset=utf-8';
+                          add_header 'Content-Length' 0;
+                          return 204;
+                      }
+                      
+                      # Timeouts for large image downloads
+                      proxy_connect_timeout 300s;
+                      proxy_send_timeout 300s;
+                      proxy_read_timeout 300s;
+                      
+                      # Buffer settings
+                      proxy_buffer_size 128k;
+                      proxy_buffers 4 256k;
+                      proxy_busy_buffers_size 256k;
+                      
+                      # SSL verification (disabled for dev environment)
+                      proxy_ssl_verify off;
+                      proxy_ssl_server_name on;
+                      
+                      # Don't cache API responses
+                      proxy_no_cache 1;
+                      proxy_cache_bypass 1;
+                  }
+
                   # Block access to sensitive files and directories
                   location ~ /\.(?!well-known).* {
                       deny all;
