feat: integrate print service deployment and package automation
- Add k8s-print-service/ manifests
  - Base deployment, service, autoscaling configs
  - Environment overlays (dev, stg, prod)
  - Migrated from separate examx-print-service-deployment repo

- Add deploy-print-service.yaml workflow
  - Handles Docker build and ECR push for print service
  - Manages K8s deployment using print service manifests
  - Triggered by examx-print-service after dependency update
  - Environment-specific deployments (dev/stg/prod)

- Update ci-cd-stg.yaml
  - Add trigger-package-publish job
  - Triggers NPM package publish after successful frontend deployment

- Update ci-cd-prod.yaml
  - Add trigger-package-publish job
  - Triggers NPM package publish after successful frontend deployment

Architecture:
- Centralized deployment management for all ExamX services
- GitOps approach: all K8s configs in deployment repo
- Separation of concerns: source repos handle code, deployment repo handles infrastructure

Related: NPM package automation implementation

--- a/.github/workflows/ci-cd-prod.yaml
+++ b/.github/workflows/ci-cd-prod.yaml
@@ -70,8 +70,13 @@ jobs:
     needs: security-password-check 
     runs-on: ${{ github.event.inputs.use_self_hosted_runner == 'true' && 'self-hosted' || 'ubuntu-24.04-arm' }}
     environment: prod
-
+    outputs:
+      deploy_branch: ${{ steps.branch-info.outputs.deploy_branch }}
     steps:
+      - name: Store branch information
+        id: branch-info
+        run: |
+          echo "deploy_branch=${{ github.event.inputs.deploy_branch }}" >> $GITHUB_OUTPUT
       - name: Checkout repository code
         uses: actions/checkout@v4
         with:
@@ -310,3 +315,20 @@ jobs:
             @${{ github.actor }}, your changes have been deployed successfully to Production. Please verify the deployment and conduct necessary tests.
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+  trigger-package-publish:
+    needs: deploy-frontend-production
+    runs-on: ubuntu-24.04-arm
+    steps:
+      - name: Trigger NPM package publish for production
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.REPO_DISPATCH_TOKEN }}
+          repository: Greatify/ExamX-V2-Frontend
+          event-type: publish-package-production
+          client-payload: |
+            {
+              "branch": "${{ needs.build-frontend-production-image.outputs.deploy_branch }}",
+              "triggered_by": "${{ github.actor }}",
+              "deployment_workflow": "ci-cd-prod"
+            }
